.changes are done

--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
 designed in order to be as much independent from the execution platform as possible.
 This language was originally developed by James Gosling and other engineers at Sun
 Microsystems. They started the Java project from research conducted at the Stanford
-University in 1991. Java was officially released on 23rd May 1995 at SunWorld. The
-language is defined by a document called The Java Language Specification.
-Nowadays, Java results to be one of the most widely used programming languages in the
-world, in particular for client-server applications.</p>
+University in 1991. </p>
 			
 		</article>
 		<article id="main-article">
@@ -39,10 +36,7 @@ world, in particular for client-server applications.</p>
 designed in order to be as much independent from the execution platform as possible.
 This language was originally developed by James Gosling and other engineers at Sun
 Microsystems. They started the Java project from research conducted at the Stanford
-University in 1991. Java was officially released on 23rd May 1995 at SunWorld. The
-language is defined by a document called The Java Language Specification.
-Nowadays, Java results to be one of the most widely used programming languages in the
-world, in particular for client-server applications.</p>
+University in 1991. </p>
 			
 		</article>
 		<article id="main-article">
@@ -52,10 +46,7 @@ world, in particular for client-server applications.</p>
 designed in order to be as much independent from the execution platform as possible.
 This language was originally developed by James Gosling and other engineers at Sun
 Microsystems. They started the Java project from research conducted at the Stanford
-University in 1991. Java was officially released on 23rd May 1995 at SunWorld. The
-language is defined by a document called The Java Language Specification.
-Nowadays, Java results to be one of the most widely used programming languages in the
-world, in particular for client-server applications.</p>
+University in 1991. </p>
 			
 		</article>
 		
@@ -72,14 +63,7 @@ University in 1991. Java was officially released on 23rd May 1995 at SunWorld. T
 language is defined by a document called The Java Language Specification.
 Nowadays, Java results to be one of the most widely used programming languages in the
 world, in particular for client-server applications.</p>
-<p>Java is a computer programming language which is mainly object-oriented. It was
-designed in order to be as much independent from the execution platform as possible.
-This language was originally developed by James Gosling and other engineers at Sun
-Microsystems. They started the Java project from research conducted at the Stanford
-University in 1991. Java was officially released on 23rd May 1995 at SunWorld. The
-language is defined by a document called The Java Language Specification.
-Nowadays, Java results to be one of the most widely used programming languages in the
-world, in particular for client-server applications.</p>
+
 			
 		</article>
 	</section>
@@ -95,14 +79,7 @@ University in 1991. Java was officially released on 23rd May 1995 at SunWorld. T
 language is defined by a document called The Java Language Specification.
 Nowadays, Java results to be one of the most widely used programming languages in the
 world, in particular for client-server applications.</p>
-<p>Java is a computer programming language which is mainly object-oriented. It was
-designed in order to be as much independent from the execution platform as possible.
-This language was originally developed by James Gosling and other engineers at Sun
-Microsystems. They started the Java project from research conducted at the Stanford
-University in 1991. Java was officially released on 23rd May 1995 at SunWorld. The
-language is defined by a document called The Java Language Specification.
-Nowadays, Java results to be one of the most widely used programming languages in the
-world, in particular for client-server applications.</p>
+
 			
 		</article>
 	</section>
@@ -118,14 +95,7 @@ University in 1991. Java was officially released on 23rd May 1995 at SunWorld. T
 language is defined by a document called The Java Language Specification.
 Nowadays, Java results to be one of the most widely used programming languages in the
 world, in particular for client-server applications.</p>
-<p>Java is a computer programming language which is mainly object-oriented. It was
-designed in order to be as much independent from the execution platform as possible.
-This language was originally developed by James Gosling and other engineers at Sun
-Microsystems. They started the Java project from research conducted at the Stanford
-University in 1991. Java was officially released on 23rd May 1995 at SunWorld. The
-language is defined by a document called The Java Language Specification.
-Nowadays, Java results to be one of the most widely used programming languages in the
-world, in particular for client-server applications.</p>
+
 			
 		</article>
 	</section>
